--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@ ol {
 }
 
 .content__list {
+  position: relative;
   height: 298px;
   overflow: scroll;
 }
@@ -101,4 +102,117 @@ ol {
   flex-direction: column;
   align-content: stretch;
   flex-grow: 1;
+}
+
+.search-form__fieldset-title {
+  font-size: 18px;
+  font-weight: 400;
+  margin-block-end: 5px;
+}
+
+.title {
+  color: #fff;
+  font-family: 'Oswald', sans-serif;
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__card-link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.content__video-card-title {
+  color: #fff;
+  font-family: 'Oswald', sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  line-height: 16.2px;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+fieldset {
+  border: none;
+}
+
+.search-form__label {
+  display: flex;
+  width: fit-content;
+  cursor: pointer;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
+}
+
+.cards-list-item-template {
+  cursor: pointer;
+}
+
+.search-form__textfield {
+  appearance: none;
+  color: inherit;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  background-color: #1b1919;
+  width: 225px;
+  border-color: #fff;
+  border-left-style: none;
+  border-right-style: none;
+  border-width: 1px;
+  height: 27px;
+}
+
+/**.search-form__textfield::placeholder {
+  color: #fff;
+}**/
+
+.button {
+  border: 1px solid #fff;
+  color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  background-color: #1b1919;
+  cursor: pointer;
+}
+
+.search-form__submit-button {
+  padding: 6px 73.5px;
+  align-self: flex-end;
+}
+
+.more-button {
+  width: 100%;
+  padding-block-start: 6px;
+  padding-block-end: 6px;
+}
+
+.search-form__pseudo-checkbox {
+  border: 1px solid #fff;
+  width: 19px;
+  height: 19px;
+  margin-inline-end: 5px;
 }
