--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@ ol {
 .content__list {
   position: relative;
   height: 298px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .content__details {
@@ -184,9 +184,9 @@ fieldset {
   height: 27px;
 }
 
-/**.search-form__textfield::placeholder {
-  color: #fff;
-}**/
+.search-form__textfield::placeholder {
+  color: color: rgba(255, 255, 255, 0.7);
+}
 
 .button {
   border: 1px solid #fff;
@@ -257,4 +257,51 @@ fieldset {
 
 .search-form__checkbox-list .search-form__label:hover {
   text-decoration: underline;
+}
+
+.button:focus { 
+  outline:none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.button:active {
+  background: #545050;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.content__card-link {
+  display:block;
+  margin: 2px;
+}
+
+.content__card-link_current {
+  outline: 1px solid #fff;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:focus {
+  outline:none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__card-link:active {
+  background: #545050;
+}
+
+::-webkit-scrollbar {
+  width: 0px;  
+  background: transparent;  
 }
