--- a/styles/style.css
+++ b/styles/style.css
@@ -10,15 +10,15 @@ html {
 
 .page {
   display: flex;
-  align-items: center;
   justify-content: center;
-  inline-size: 1200px;
-  block-size: 100%;
+  align-items: center;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  inline-size: 1200px;
+  block-size: 100%;
 }
 
 h1,
@@ -41,12 +41,12 @@ ol {
 }
 
 .content {
-  display: flex;
   position: relative;
+  display: flex;
   flex-direction: row;
   align-items: flex-end;
-  width: 1140px;
   gap: 30px;
+  width: 1140px;
 }
 
 .search-form {
@@ -77,7 +77,6 @@ ol {
 }
 
 .result__video {
-  position: absolute;
   width: 100%;
   height: 100%;
 }
@@ -100,21 +99,21 @@ ol {
 .content__video-card-description-container {
   display: flex;
   flex-direction: column;
-  align-content: stretch;
   flex-grow: 1;
+  align-content: stretch;
 }
 
 .search-form__fieldset-title {
-  font-size: 18px;
-  font-weight: 400;
   margin-block-end: 5px;
+  font-weight: 400;
+  font-size: 18px;
 }
 
 .title {
   color: #fff;
-  font-family: 'Oswald', sans-serif;
-  font-size: 75px;
+  font-family: "Oswald", sans-serif;
   font-weight: 700;
+  font-size: 75px;
   line-height: 94%;
   text-transform: uppercase;
 }
@@ -124,15 +123,15 @@ ol {
 }
 
 .content__card-link {
-  text-decoration: none;
   color: #fff;
+  text-decoration: none;
 }
 
 .content__video-card-title {
   color: #fff;
-  font-family: 'Oswald', sans-serif;
-  font-size: 30px;
+  font-family: "Oswald", sans-serif;
   font-weight: 700;
+  font-size: 30px;
   text-transform: uppercase;
 }
 
@@ -142,10 +141,10 @@ ol {
 
 .visually-hidden {
   position: absolute;
-  inline-size: 1px;
-  block-size: 1px;
   overflow: hidden;
   clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
   clip-path: inset(50%);
   white-space: nowrap;
 }
@@ -171,27 +170,27 @@ fieldset {
 }
 
 .search-form__textfield {
-  appearance: none;
+  width: 225px;
+  height: 27px;
+  border: 1px solid #fff;
+  border-right-style: none;
+  border-left-style: none;
   color: inherit;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
   background-color: #1b1919;
-  width: 225px;
-  border: 1px solid #fff;
-  border-left-style: none;
-  border-right-style: none;
-  height: 27px;
+  appearance: none;
 }
 
 .search-form__textfield::placeholder {
-  color: color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .button {
   border: 1px solid #fff;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 700;
   font-size: 18px;
   background-color: #1b1919;
@@ -199,8 +198,8 @@ fieldset {
 }
 
 .search-form__submit-button {
-  padding: 6px 73.5px;
   align-self: flex-end;
+  padding: 6px 73.5px;
 }
 
 .more-button {
@@ -210,10 +209,10 @@ fieldset {
 }
 
 .search-form__pseudo-checkbox {
-  border: 1px solid #fff;
   width: 19px;
   height: 19px;
   margin-inline-end: 5px;
+  border: 1px solid #fff;
 }
 
 .search-form__label-text:focus {
@@ -221,7 +220,7 @@ fieldset {
 }
 
 .search-form__label:focus {
-  outline: none; 
+  outline: none;
 }
 
 .search-form__textfield:focus {
@@ -233,17 +232,12 @@ fieldset {
   outline-offset: 1px;
 }
 
-.search-form__pseudo-checkbox {
-  position: relative;
-}
-
-.search-form__checkbox:checked+.search-form__pseudo-checkbox::after {
-  content: '';
-  position: absolute;
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: "";
+  display: block;
   width: 15px;
   height: 15px;
-  left: 1px;
-  top: 1px;
+  margin: 1px;
   background-color: #fff;
 }
 
@@ -259,8 +253,8 @@ fieldset {
   text-decoration: underline;
 }
 
-.button:focus { 
-  outline:none;
+.button:focus {
+  outline: none;
 }
 
 .button:focus-visible {
@@ -277,20 +271,20 @@ fieldset {
 }
 
 .content__card-link {
-  display:block;
+  display: block;
   margin: 2px;
 }
 
+.content__card-link:focus {
+  outline: none;
+}
+
 .content__card-link_current {
-  outline: 1px solid #fff;
+  background: #545050;
 }
 
 .content__card-link:hover {
   text-decoration: underline;
-}
-
-.content__card-link:focus {
-  outline:none;
 }
 
 .content__card-link:focus-visible {
@@ -302,6 +296,6 @@ fieldset {
 }
 
 ::-webkit-scrollbar {
-  width: 0px;  
-  background: transparent;  
+  width: 0px;
+  background: transparent;
 }
