--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,7 @@ ol {
   position: relative;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: flex-end;
   gap: 30px;
   max-width: 1140px;
@@ -58,7 +59,8 @@ ol {
 
 .content__list {
   position: relative;
-  max-height: 298px;
+  width: 399px;
+  height: 298px;
   overflow-y: auto;
 }
 
@@ -71,8 +73,8 @@ ol {
 
 .result__video-container {
   position: relative;
-  min-width: 711px;
-  min-height: 386px;
+  width: 711px;
+  height: 386px;
   margin-block-end: 16px;
 }
 
@@ -80,6 +82,7 @@ ol {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .content__list-item:not(:last-child) {
@@ -93,9 +96,10 @@ ol {
 }
 
 .content__video-card-thumbnail {
-  max-width: 194px;
-  max-height: 103px;
+  width: 194px;
+  height: 103px;
   object-fit: cover;
+  object-position: center;
 }
 
 .content__video-card-description-container {
@@ -107,12 +111,12 @@ ol {
 
 .search-form__fieldset-title {
   margin-block-end: 5px;
-  font-weight: 400;
-  font-size: 18px;
+  font-weight: inherit;
+  font-size: inherit;
 }
 
 .title {
-  color: #fff;
+  color: inherit;
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 75px;
@@ -125,12 +129,14 @@ ol {
 }
 
 .content__card-link {
-  color: #fff;
+  display: block;
+  margin: 2px;
+  color: inherit;
   text-decoration: none;
 }
 
 .content__video-card-title {
-  color: #fff;
+  color: inherit;
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 30px;
@@ -174,27 +180,28 @@ fieldset {
 .search-form__textfield {
   min-width: 225px;
   min-height: 27px;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   border-right-style: none;
   border-left-style: none;
   color: inherit;
-  font-family: "Fira Sans Condensed", sans-serif;
-  font-weight: 400;
-  font-size: 18px;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
   background-color: #1b1919;
   appearance: none;
 }
 
 .search-form__textfield::placeholder {
-  color: rgba(255, 255, 255, 0.7);
+  opacity: 0.7;
+  color: inherit;
 }
 
 .button {
-  border: 1px solid #fff;
-  color: #fff;
-  font-family: "Fira Sans Condensed", sans-serif;
+  border: 1px solid currentColor;
+  color: inherit;
+  font-family: inherit;
   font-weight: 700;
-  font-size: 18px;
+  font-size: inherit;
   background-color: #1b1919;
   cursor: pointer;
 }
@@ -214,7 +221,7 @@ fieldset {
   width: 19px;
   height: 19px;
   margin-inline-end: 5px;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
 }
 
 .search-form__label-text:focus {
@@ -230,7 +237,7 @@ fieldset {
 }
 
 .search-form__label:has(:focus-visible) {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 1px;
 }
 
@@ -240,7 +247,7 @@ fieldset {
   width: 15px;
   height: 15px;
   margin: 1px;
-  background-color: #fff;
+  background-color: currentColor;
 }
 
 .search-form__checkbox:hover {
@@ -260,7 +267,7 @@ fieldset {
 }
 
 .button:focus-visible {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 1px;
 }
 
@@ -270,11 +277,6 @@ fieldset {
 
 .button:hover {
   text-decoration: underline;
-}
-
-.content__card-link {
-  display: block;
-  margin: 2px;
 }
 
 .content__card-link:focus {
@@ -290,7 +292,7 @@ fieldset {
 }
 
 .content__card-link:focus-visible {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
 }
 
 .content__card-link:active {
